deploy: ee4163eaed233c3e3ce65b295a2d159bce5a4c15

--- a/get-out-of-life-what-you-deserve/index.html
+++ b/get-out-of-life-what-you-deserve/index.html
@@ -2,7 +2,7 @@
 <title>
 Slav
 |
-get out of life what you deserve
+Quote - Get out of life what you deserve
 </title>
 <meta charset=utf-8><meta name=generator content="Hugo 0.88.1"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name=description content="
@@ -12,6 +12,7 @@ get out of life what you deserve
     ">
 <link rel=stylesheet href=/css/main.min.0a28517cc8cf1577ac08fce9aed49bbe584c350d58aaf61fb13d6cb13792aeb7.css integrity="sha256-CihRfMjPFXesCPzprtSbvlhMNQ1YqvYfsT1ssTeSrrc=" crossorigin=anonymous type=text/css>
 <link rel=stylesheet href=/css/markupHighlight.min.8e4c8f0a940b1596fb4c64d28a00a5ceed671fc303cb65178b4947417da9c674.css integrity="sha256-jkyPCpQLFZb7TGTSigClzu1nH8MDy2UXi0lHQX2pxnQ=" crossorigin=anonymous type=text/css>
+<link rel=stylesheet href=/css/custom.min.4422e856fcd6f2ee14f32638fe94285230801e7900face89ab29c81910e7e7ba.css integrity="sha256-RCLoVvzW8u4U8yY4/pQoUjCAHnkA+s6JqynIGRDn57o=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin=anonymous>
 <link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
 <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
@@ -21,10 +22,10 @@ get out of life what you deserve
 <script type=text/javascript src=/js/anatole-header.min.2a2cd9614b7d007dfbb75e8da19e3a0fa872ceab53c6d000c00b7a0c89b85bfc.js integrity="sha256-KizZYUt9AH37t16NoZ46D6hyzqtTxtAAwAt6DIm4W/w=" crossorigin=anonymous></script>
 <script type=text/javascript src=/js/anatole-theme-switcher.min.7fd87181cdd7e8413aa64b6867bb32f3a8dc242e684fc7d5bbb9f600dbc2b6eb.js integrity="sha256-f9hxgc3X6EE6pktoZ7sy86jcJC5oT8fVu7n2ANvCtus=" crossorigin=anonymous></script>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="get out of life what you deserve">
+<meta name=twitter:title content="Quote - Get out of life what you deserve">
 <meta name=twitter:description content=" “Spend each day trying to be a little wiser than you were when you woke up. Day by day, and at the end of the day-if you live long enough-like most people, you will get out of life what you deserve.” — Charlie Munger
  ">
-<script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","articleSection":"posts","name":"get out of life what you deserve","headline":"get out of life what you deserve","alternativeHeadline":"","description":"
+<script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","articleSection":"posts","name":"Quote - Get out of life what you deserve","headline":"Quote - Get out of life what you deserve","alternativeHeadline":"","description":"
       
          “Spend each day trying to be a little wiser than you were when you woke up. Day by day, and at the end of the day-if you live long enough-like most people, you will get out of life what you deserve.” — Charlie Munger\n 
 
@@ -52,10 +53,10 @@ animated fadeInDown">
 <a href=/posts/ title>Blog</a>
 </li>
 <li>
-<a href=/category/arduino/ title>Arduino</a>
+<a href=/categories/arduino/ title>Arduino</a>
 </li>
 <li>
-<a href=/category/work/ title>Work</a>
+<a href=/categories/work/ title>Work</a>
 </li>
 <li>
 <a href=/contact/ title=Contact>Contact</a>
@@ -95,6 +96,11 @@ animated fadeInDown">
 </a>
 </li>
 <li>
+<a href=https://stackoverflow.com/users/432573/ rel=me aria-label="Stack Overflow">
+<i class="fab fa-stack-overflow fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
 <a href=https://twitter.com/slavomirj rel=me aria-label>
 <i class="fab fa-twitter fa-2x" aria-hidden=true></i>
 </a>
@@ -129,7 +135,7 @@ animated fadeInDown">
 animated fadeInDown">
 <div class=post-content>
 <div class=post-title>
-<h1>get out of life what you deserve</h1>
+<h1>Quote - Get out of life what you deserve</h1>
 <div class=info>
 <em class="fas fa-calendar-day"></em>
 <span class=date>
