--- a/atm-fail/index.html
+++ b/atm-fail/index.html
@@ -12,6 +12,7 @@ ATM fail
     ">
 <link rel=stylesheet href=/css/main.min.0a28517cc8cf1577ac08fce9aed49bbe584c350d58aaf61fb13d6cb13792aeb7.css integrity="sha256-CihRfMjPFXesCPzprtSbvlhMNQ1YqvYfsT1ssTeSrrc=" crossorigin=anonymous type=text/css>
 <link rel=stylesheet href=/css/markupHighlight.min.8e4c8f0a940b1596fb4c64d28a00a5ceed671fc303cb65178b4947417da9c674.css integrity="sha256-jkyPCpQLFZb7TGTSigClzu1nH8MDy2UXi0lHQX2pxnQ=" crossorigin=anonymous type=text/css>
+<link rel=stylesheet href=/css/custom.min.4422e856fcd6f2ee14f32638fe94285230801e7900face89ab29c81910e7e7ba.css integrity="sha256-RCLoVvzW8u4U8yY4/pQoUjCAHnkA+s6JqynIGRDn57o=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin=anonymous>
 <link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
 <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
@@ -51,10 +52,10 @@ animated fadeInDown">
 <a href=/posts/ title>Blog</a>
 </li>
 <li>
-<a href=/category/arduino/ title>Arduino</a>
+<a href=/categories/arduino/ title>Arduino</a>
 </li>
 <li>
-<a href=/category/work/ title>Work</a>
+<a href=/categories/work/ title>Work</a>
 </li>
 <li>
 <a href=/contact/ title=Contact>Contact</a>
@@ -91,6 +92,11 @@ animated fadeInDown">
 <li>
 <a href=https://github.com/slav123 rel=me aria-label>
 <i class="fab fa-github fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
+<a href=https://stackoverflow.com/users/432573/ rel=me aria-label="Stack Overflow">
+<i class="fab fa-stack-overflow fa-2x" aria-hidden=true></i>
 </a>
 </li>
 <li>
