--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Mr Slav – I solve problems
     ">
 <link rel=stylesheet href=/css/main.min.0a28517cc8cf1577ac08fce9aed49bbe584c350d58aaf61fb13d6cb13792aeb7.css integrity="sha256-CihRfMjPFXesCPzprtSbvlhMNQ1YqvYfsT1ssTeSrrc=" crossorigin=anonymous type=text/css>
 <link rel=stylesheet href=/css/markupHighlight.min.8e4c8f0a940b1596fb4c64d28a00a5ceed671fc303cb65178b4947417da9c674.css integrity="sha256-jkyPCpQLFZb7TGTSigClzu1nH8MDy2UXi0lHQX2pxnQ=" crossorigin=anonymous type=text/css>
+<link rel=stylesheet href=/css/custom.min.4422e856fcd6f2ee14f32638fe94285230801e7900face89ab29c81910e7e7ba.css integrity="sha256-RCLoVvzW8u4U8yY4/pQoUjCAHnkA+s6JqynIGRDn57o=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin=anonymous>
 <link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
 <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
@@ -44,10 +45,10 @@ animated fadeInDown">
 <a href=/posts/ title>Blog</a>
 </li>
 <li>
-<a href=/category/arduino/ title>Arduino</a>
+<a href=/categories/arduino/ title>Arduino</a>
 </li>
 <li>
-<a href=/category/work/ title>Work</a>
+<a href=/categories/work/ title>Work</a>
 </li>
 <li>
 <a href=/contact/ title=Contact>Contact</a>
@@ -84,6 +85,11 @@ animated fadeInDown">
 <li>
 <a href=https://github.com/slav123 rel=me aria-label>
 <i class="fab fa-github fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
+<a href=https://stackoverflow.com/users/432573/ rel=me aria-label="Stack Overflow">
+<i class="fab fa-stack-overflow fa-2x" aria-hidden=true></i>
 </a>
 </li>
 <li>
@@ -211,7 +217,7 @@ I wasn’t sure what exactly I’ve got. I just run Serial Detect to identify wh
 Tue, Jan 22, 2019
 </span>
 <span class=separator><a class=category href=/categories/arduino/>Arduino</a></span>
-<span class=separator><a class=tag href=/tags/arduino/>arduino</a><a class=tag href=/tags/drivers/>drivers</a><a class=tag href=/tags/serial/>serial</a><a class=tag href=/tags/ttl/>ttl</a></span>
+<span class=separator><a class=tag href=/tags/drivers/>drivers</a><a class=tag href=/tags/serial/>serial</a></span>
 </div>
 </div>
 </div>
@@ -219,7 +225,7 @@ Tue, Jan 22, 2019
 <div class="post
 animated fadeInDown">
 <div class=post-title>
-<h3><a href=/get-out-of-life-what-you-deserve/>get out of life what you deserve</a></h3>
+<h3><a href=/get-out-of-life-what-you-deserve/>Quote - Get out of life what you deserve</a></h3>
 </div>
 <div class=post-content>
 <div class=p_part>
@@ -323,32 +329,6 @@ Mon, Sep 4, 2017
 <div class="post
 animated fadeInDown">
 <div class=post-title>
-<h3><a href=/windows-smb-printer-on-mac-os-x-sierra/>Windows SMB printer on Mac OS X Sierra</a></h3>
-</div>
-<div class=post-content>
-<div class=p_part>
-<p>
-<p> </p>
-<p>Quick tutorial how to add SMB printer on Mac OS X Sierra.</p>
-</p>
-</div>
-</div>
-<div class=post-footer>
-<div class=meta>
-<div class=info>
-<em class="fas fa-calendar-day"></em>
-<span class=date>
-Sun, Dec 18, 2016
-</span>
-<span class=separator><a class=category href=/categories/tutorials/>Tutorials</a></span>
-<span class=separator><a class=tag href=/tags/mac-os-x/>mac os x</a><a class=tag href=/tags/printer/>printer</a><a class=tag href=/tags/sierra/>sierra</a><a class=tag href=/tags/smb/>smb</a></span>
-</div>
-</div>
-</div>
-</div>
-<div class="post
-animated fadeInDown">
-<div class=post-title>
 <h3><a href=/disable-keyboard-vibrate-on-android-6/>Disable keyboard vibrate on Android 6</a></h3>
 </div>
 <div class=post-content>
@@ -381,13 +361,18 @@ Tue, Jan 19, 2016
 </div>
 <div class="post
 animated fadeInDown">
+<div class=post-thumbnail>
+<a href=/another-day-another-award/>
+<img src=/images/2015/06/R481_TelstraSNYE_MobileApp6_1.jpg alt="Thumbnail image" loading=lazy>
+</a>
+</div>
 <div class=post-title>
-<h3><a href=/macbook-pro-cant-connect-to-5-ghz-wireless-n-network/>MacBook Pro can’t connect to 5 GHz wireless N network</a></h3>
+<h3><a href=/another-day-another-award/>Another day another award…</a></h3>
 </div>
 <div class=post-content>
 <div class=p_part>
 <p>
-<p>That one was tricky. Got brand new router and couldn’t connect to 5 Ghz network. My iPhone didn’t have this issues, neither couple other devices at home. I spend some time randomly changing settings on wireless network, and then I found tricky information – my MacBook can’t use all available channels, can work only on specific one.</p>
+<p>For 3 years in a row I’ve been working on Telstra NYE Mobile APP (via Imagination) and this time we won Awards. Obviously credits goes to whole team – but I’m glad the we make it this time.</p>
 </p>
 </div>
 </div>
@@ -396,9 +381,35 @@ animated fadeInDown">
 <div class=info>
 <em class="fas fa-calendar-day"></em>
 <span class=date>
-Sat, Dec 12, 2015
+Tue, Jun 2, 2015
 </span>
-<span class=separator><a class=category href=/categories/tutorials/>Tutorials</a></span>
+<span class=separator><a class=category href=/categories/work/>Work</a></span>
+<span class=separator><a class=tag href=/tags/agency/>agency</a><a class=tag href=/tags/award/>award</a><a class=tag href=/tags/imagination/>imagination</a><a class=tag href=/tags/mobile/>mobile</a></span>
+</div>
+</div>
+</div>
+</div>
+<div class="post
+animated fadeInDown">
+<div class=post-title>
+<h3><a href=/ge-ecomagination-centre/>GE Ecomagination Centre</a></h3>
+</div>
+<div class=post-content>
+<div class=p_part>
+<p>
+GE Ecomagination Centre is the 840 square-metre space in Masdar City’s Incubator Building, showcases GE’s advanced technologies from cleaner solutions for power grids to upmarket appliances.
+I was heavily involved with building and designing some cool elements of this centre.
+</p>
+</div>
+</div>
+<div class=post-footer>
+<div class=meta>
+<div class=info>
+<em class="fas fa-calendar-day"></em>
+<span class=date>
+Thu, Jan 15, 2015
+</span>
+<span class=separator><a class=category href=/categories/work/>Work</a></span>
 </div>
 </div>
 </div>
