deploy: f921e45c2076cfdcf67277de458ce57d6859fe2b

--- a/404.html
+++ b/404.html
@@ -101,6 +101,11 @@ animated fadeInDown">
 </a>
 </li>
 <li>
+<a href=https://www.spidersoft.com.au rel=me aria-label=business>
+<i class="fas fa-business-time fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
 <a href=mailto:slav123@gmail.com rel=me aria-label=e-mail>
 <i class="fas fa-envelope fa-2x" aria-hidden=true></i>
 </a>
