--- a/atm-fail/index.html
+++ b/atm-fail/index.html
@@ -110,6 +110,11 @@ animated fadeInDown">
 </a>
 </li>
 <li>
+<a href=https://www.spidersoft.com.au rel=me aria-label=business>
+<i class="fas fa-business-time fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
 <a href=mailto:slav123@gmail.com rel=me aria-label=e-mail>
 <i class="fas fa-envelope fa-2x" aria-hidden=true></i>
 </a>
@@ -145,6 +150,7 @@ Thu, Jun 19, 2014
 <span class=reading-time>One-minute read</span>
 </div>
 </div><p>It happens 😉</p>
+<p><img src=/images/2015/06/cba-atm-fail.jpg alt></p>
 </div>
 <div class=post-footer>
 <div class=info>
