--- a/cheap-arduino-clone-dccele-dccduino-uno/index.html
+++ b/cheap-arduino-clone-dccele-dccduino-uno/index.html
@@ -116,6 +116,11 @@ animated fadeInDown">
 </a>
 </li>
 <li>
+<a href=https://www.spidersoft.com.au rel=me aria-label=business>
+<i class="fas fa-business-time fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
 <a href=mailto:slav123@gmail.com rel=me aria-label=e-mail>
 <i class="fas fa-envelope fa-2x" aria-hidden=true></i>
 </a>
@@ -153,7 +158,7 @@ Tue, Sep 2, 2014
 </div><p>Recently I bought very cheaply Arduino UNO Clone called <strong>DccEle – DCcduino UNO</strong>. Be default It wasn’t recognized by my Mac OS. After a quick google search, I found this
 <a href="http://forum.arduino.cc/index.php?topic=261375.0">article</a>
  which pointed me to proper drivers.</p>
-<p><img src=/images/2014/09/cheap-arduino.jpg alt></p>
+<p><img src=/images/2014/09/cheap-arduino.jpg alt=cheap-arduino></p>
 <p>If you are not afraid, just pull drivers from this website 
 <a href=http://www.5v.ru/ch340g.htm>www.5v.ru</a>
  or this one 
