--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@ animated fadeInDown">
 </a>
 </li>
 <li>
+<a href=https://www.spidersoft.com.au rel=me aria-label=business>
+<i class="fas fa-business-time fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
 <a href=mailto:slav123@gmail.com rel=me aria-label=e-mail>
 <i class="fas fa-envelope fa-2x" aria-hidden=true></i>
 </a>
@@ -422,9 +427,8 @@ Thu, Jan 15, 2015
 <li class=page-item>
 <a class=page-link href=/page/2/>2</a>
 </li>
-<span class="page-link dots">&mldr;</span>
 <li class=page-item>
-<a class=page-link href=/page/4/>4</a>
+<a class=page-link href=/page/3/>3</a>
 </li>
 <li class=page-item>
 <a class=page-link href=/page/2/>
