--- a/leadership/index.html
+++ b/leadership/index.html
@@ -2,7 +2,7 @@
 <title>
 Slav
 |
-Leadership
+Quote - Leadership
 </title>
 <meta charset=utf-8><meta name=generator content="Hugo 0.88.1"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name=description content="
@@ -22,10 +22,10 @@ Leadership
 <script type=text/javascript src=/js/anatole-header.min.2a2cd9614b7d007dfbb75e8da19e3a0fa872ceab53c6d000c00b7a0c89b85bfc.js integrity="sha256-KizZYUt9AH37t16NoZ46D6hyzqtTxtAAwAt6DIm4W/w=" crossorigin=anonymous></script>
 <script type=text/javascript src=/js/anatole-theme-switcher.min.7fd87181cdd7e8413aa64b6867bb32f3a8dc242e684fc7d5bbb9f600dbc2b6eb.js integrity="sha256-f9hxgc3X6EE6pktoZ7sy86jcJC5oT8fVu7n2ANvCtus=" crossorigin=anonymous></script>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Leadership">
+<meta name=twitter:title content="Quote - Leadership">
 <meta name=twitter:description content="Leadership is the art of getting someone else to do something you want done because he wants to do it.
  Dwight D. Eisenhower">
-<script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","articleSection":"posts","name":"Leadership","headline":"Leadership","alternativeHeadline":"","description":"
+<script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","articleSection":"posts","name":"Quote - Leadership","headline":"Quote - Leadership","alternativeHeadline":"","description":"
       
         Leadership is the art of getting someone else to do something you want done because he wants to do it.\n Dwight D. Eisenhower
 
@@ -111,6 +111,11 @@ animated fadeInDown">
 </a>
 </li>
 <li>
+<a href=https://www.spidersoft.com.au rel=me aria-label=business>
+<i class="fas fa-business-time fa-2x" aria-hidden=true></i>
+</a>
+</li>
+<li>
 <a href=mailto:slav123@gmail.com rel=me aria-label=e-mail>
 <i class="fas fa-envelope fa-2x" aria-hidden=true></i>
 </a>
@@ -135,7 +140,7 @@ animated fadeInDown">
 animated fadeInDown">
 <div class=post-content>
 <div class=post-title>
-<h1>Leadership</h1>
+<h1>Quote - Leadership</h1>
 <div class=info>
 <em class="fas fa-calendar-day"></em>
 <span class=date>
