--- a/ge-ecomagination-centre/index.html
+++ b/ge-ecomagination-centre/index.html
@@ -62,6 +62,8 @@ animated fadeInDown">
 <li>
 <a href=/contact/ title=Contact>Contact</a>
 </li>
+<li><a href=/ title=EN>EN</a></li>
+<li><a href=/pl/ title=PL>PL</a></li>
 </div>
 <li>
 <a class=theme-switch title="Switch Theme">
@@ -107,7 +109,7 @@ animated fadeInDown">
 </a>
 </li>
 <li>
-<a href=https://www.instagram.com/ rel=me aria-label=instagram>
+<a href=https://www.instagram.com/slavomirj/ rel=me aria-label=instagram>
 <i class="fab fa-instagram fa-2x" aria-hidden=true></i>
 </a>
 </li>
