--- a/nodemcu-esp8266-water-level-monitor-with-a-voltage-sensor/index.html
+++ b/nodemcu-esp8266-water-level-monitor-with-a-voltage-sensor/index.html
@@ -66,6 +66,8 @@ animated fadeInDown">
 <li>
 <a href=/contact/ title=Contact>Contact</a>
 </li>
+<li><a href=/ title=EN>EN</a></li>
+<li><a href=/pl/ title=PL>PL</a></li>
 </div>
 <li>
 <a class=theme-switch title="Switch Theme">
@@ -111,7 +113,7 @@ animated fadeInDown">
 </a>
 </li>
 <li>
-<a href=https://www.instagram.com/ rel=me aria-label=instagram>
+<a href=https://www.instagram.com/slavomirj/ rel=me aria-label=instagram>
 <i class="fab fa-instagram fa-2x" aria-hidden=true></i>
 </a>
 </li>
