--- a/pl/index.html
+++ b/pl/index.html
@@ -1,12 +1,12 @@
-<!doctype html><html dir=ltr lang=en data-theme><head>
+<!doctype html><html dir=ltr lang=pl data-theme><head>
 <title>
 Slav
 |
-psd2html
+Start
 </title>
 <meta charset=utf-8><meta name=generator content="Hugo 0.88.1"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name=description content="
-      Call me Slav
+      Strona prywatna Sławomir Jasiński
 
 
     ">
@@ -18,13 +18,14 @@ psd2html
 <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
-<link rel=canonical href=/tags/psd2html/>
-<link rel=alternate type=application/rss+xml href=/tags/psd2html/index.xml title="My blog">
+<link rel=canonical href=/pl/>
+<link rel=alternate type=application/rss+xml href=/pl/index.xml title="Sławomir Jasiński">
 <script type=text/javascript src=/js/anatole-header.min.2a2cd9614b7d007dfbb75e8da19e3a0fa872ceab53c6d000c00b7a0c89b85bfc.js integrity="sha256-KizZYUt9AH37t16NoZ46D6hyzqtTxtAAwAt6DIm4W/w=" crossorigin=anonymous></script>
 <script type=text/javascript src=/js/anatole-theme-switcher.min.7fd87181cdd7e8413aa64b6867bb32f3a8dc242e684fc7d5bbb9f600dbc2b6eb.js integrity="sha256-f9hxgc3X6EE6pktoZ7sy86jcJC5oT8fVu7n2ANvCtus=" crossorigin=anonymous></script>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="psd2html">
-<meta name=twitter:description content="Call me Slav">
+<meta name=twitter:title content="Start">
+<meta name=twitter:description content="Strona prywatna Sławomir Jasiński">
+<script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","name":"Sławomir Jasiński","url":"\/","description":"Strona prywatna Sławomir Jasiński","thumbnailUrl":"\/","license":"2011-2021"}</script>
 </head>
 <body>
 <header><div class="page-top
@@ -38,20 +39,10 @@ animated fadeInDown">
 <ul class=nav__list id=navMenu>
 <div class=nav__links>
 <li>
-<a href=/about/ title=About>About</a>
+<a href=/pl/o-mnie/ title="O mnie">O mnie</a>
 </li>
-<li>
-<a href=/posts/ title>Blog</a>
-</li>
-<li>
-<a href=/categories/arduino/ title>Arduino</a>
-</li>
-<li>
-<a href=/categories/work/ title>Work</a>
-</li>
-<li>
-<a href=/contact/ title=Contact>Contact</a>
-</li>
+<li><a href=/ title=EN>EN</a></li>
+<li><a href=/pl/ title=PL>PL</a></li>
 </div>
 <li>
 <a class=theme-switch title="Switch Theme">
@@ -69,9 +60,9 @@ animated fadeInDown">
 <div class=logo-title>
 <div class=title>
 <img src=/images/slavsq.jpg alt="profile picture">
-<h3 title><a href=/>My blog</a></h3>
+<h3 title><a href=/>Sławomir Jasiński</a></h3>
 <div class=description>
-<p>Call me Slav</p>
+<p>Strona prywatna Sławomir Jasiński</p>
 </div>
 </div>
 </div>
@@ -97,7 +88,7 @@ animated fadeInDown">
 </a>
 </li>
 <li>
-<a href=https://www.instagram.com/ rel=me aria-label=instagram>
+<a href=https://www.instagram.com/slavomirj/ rel=me aria-label=instagram>
 <i class="fab fa-instagram fa-2x" aria-hidden=true></i>
 </a>
 </li>
@@ -127,23 +118,17 @@ animated fadeInDown">
 <main>
 <div class=autopagerize_page_element>
 <div class=content>
-<div class="archive
+<div class="post
 animated fadeInDown">
-<ul class=list-with-title>
-<div class=listing-title>2013</div>
-<ul class=listing>
-<div class=listing-item>
-<div class=listing-post>
-<a href=/microsite-for-contact-centre-technology-platform/ title="Microsite for contact centre technology platform">Microsite for contact centre technology platform</a>
-<div class=post-time>
-<span class=date>
-Apr 15
-</span>
+<div class="post-title post-content">
+<p>Witam na mojej stronie,</p>
+<p>Jest to pierwsza edycja &ldquo;tej&rdquo; strony po polsku. Jeśli szukasz bloga technicznego to zerknij na
+<a href=https://www.gex.pl>Blog Developera</a>
+, tutaj znajdziesz wszystkie publikacje niezwiązane z technologią.</p>
+<p>Postów po polsku na razie nie ma, ale z pewnością się pojawią.</p>
 </div>
 </div>
-</div>
-</ul>
-</ul>
+<div class=pagination>
 </div>
 </div>
 </div>
