deploy: 2ca62007d4d6ffabe39d84c4e4d3358f0d7296c0

--- a/pl/404.html
+++ b/pl/404.html
@@ -39,6 +39,9 @@ animated fadeInDown">
 <li>
 <a href=/pl/o-mnie/ title="O mnie">O mnie</a>
 </li>
+<li>
+<a href=/pl/categories/diy/ title>Diy</a>
+</li>
 <li><a href=/ title=EN>EN</a></li>
 <li><a href=/pl/ title=PL>PL</a></li>
 </div>
