--- a/pl/index.html
+++ b/pl/index.html
@@ -41,6 +41,9 @@ animated fadeInDown">
 <li>
 <a href=/pl/o-mnie/ title="O mnie">O mnie</a>
 </li>
+<li>
+<a href=/pl/categories/diy/ title>Diy</a>
+</li>
 <li><a href=/ title=EN>EN</a></li>
 <li><a href=/pl/ title=PL>PL</a></li>
 </div>
@@ -124,8 +127,66 @@ animated fadeInDown">
 <p>Witam na mojej stronie,</p>
 <p>Jest to pierwsza edycja &ldquo;tej&rdquo; strony po polsku. Jeśli szukasz bloga technicznego to zerknij na
 <a href=https://www.gex.pl>Blog Developera</a>
-, tutaj znajdziesz wszystkie publikacje niezwiązane z technologią.</p>
-<p>Postów po polsku na razie nie ma, ale z pewnością się pojawią.</p>
+, na tej stronie znajdziesz wszystkie publikacje niezwiązane z technologią.</p>
+</div>
+</div>
+<div class="post
+animated fadeInDown">
+<div class=post-thumbnail>
+<a href=/2021/deska-do-krojenia/>
+<img src=/images/2021/04/deska-wip.jpg alt="Thumbnail image" loading=lazy>
+</a>
+</div>
+<div class=post-title>
+<h3><a href=/2021/deska-do-krojenia/>Deska do krojenia</a></h3>
+</div>
+<div class=post-content>
+<div class=p_part>
+<p>
+Deska do krojenia jako szybki prezent dla rodziny &ldquo;Pająków&rdquo;. Deski dębowe, sklejone z lamelkami. Logo wypalone przez laser, dziura wycięta frezarką.
+View this post on Instagram A post shared by Slawomir Jasinski (@slavomirj)
+</p>
+</div>
+</div>
+<div class=post-footer>
+<div class=meta>
+<div class=info>
+<em class="fas fa-calendar-day"></em>
+<span class=date>
+Sat, Apr 17, 2021
+</span>
+<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span>
+</div>
+</div>
+</div>
+</div>
+<div class="post
+animated fadeInDown">
+<div class=post-thumbnail>
+<a href=/2021/plywajace-narozne-biurko/>
+<img src=/images/2021/04/plywajace-biurko.jpg alt="Thumbnail image" loading=lazy>
+</a>
+</div>
+<div class=post-title>
+<h3><a href=/2021/plywajace-narozne-biurko/>Pływające biurko narożne</a></h3>
+</div>
+<div class=post-content>
+<div class=p_part>
+<p>
+<p>Od dawna chciałem wymienić moje &ldquo;tyczasowe&rdquo; rozwiązanie z Ikei na coś bardziej solidnego. Miało być duzo miejsca, nie miało mieć typowych nóg - oraz miało być narożne.</p>
+</p>
+</div>
+</div>
+<div class=post-footer>
+<div class=meta>
+<div class=info>
+<em class="fas fa-calendar-day"></em>
+<span class=date>
+Sat, Apr 3, 2021
+</span>
+<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span>
+</div>
+</div>
 </div>
 </div>
 <div class=pagination>
