--- a/pl/index.html
+++ b/pl/index.html
@@ -1,238 +1,27 @@
-<!doctype html><html dir=ltr lang=pl data-theme><head>
-<title>
-Slav
+<!doctype html><html dir=ltr lang=pl data-theme><head><title>Slav
 |
-Start
-</title>
-<meta charset=utf-8><meta name=generator content="Hugo 0.92.1"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover">
-<meta name=description content="
+Start</title><meta charset=utf-8><meta name=generator content="Hugo 0.101.0"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover"><meta name=description content="
       Strona prywatna Sławomir Jasiński
 
 
-    ">
-<link rel=stylesheet href=/css/main.min.0a28517cc8cf1577ac08fce9aed49bbe584c350d58aaf61fb13d6cb13792aeb7.css integrity="sha256-CihRfMjPFXesCPzprtSbvlhMNQ1YqvYfsT1ssTeSrrc=" crossorigin=anonymous type=text/css>
-<link rel=stylesheet href=/css/markupHighlight.min.8e4c8f0a940b1596fb4c64d28a00a5ceed671fc303cb65178b4947417da9c674.css integrity="sha256-jkyPCpQLFZb7TGTSigClzu1nH8MDy2UXi0lHQX2pxnQ=" crossorigin=anonymous type=text/css>
-<link rel=stylesheet href=/css/custom.min.4422e856fcd6f2ee14f32638fe94285230801e7900face89ab29c81910e7e7ba.css integrity="sha256-RCLoVvzW8u4U8yY4/pQoUjCAHnkA+s6JqynIGRDn57o=" crossorigin=anonymous media=screen>
-<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin=anonymous>
-<link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
-<link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
-<link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
-<link rel=canonical href=/pl/>
-<link rel=alternate type=application/rss+xml href=/pl/index.xml title="Sławomir Jasiński">
-<script type=text/javascript src=/js/anatole-header.min.2a2cd9614b7d007dfbb75e8da19e3a0fa872ceab53c6d000c00b7a0c89b85bfc.js integrity="sha256-KizZYUt9AH37t16NoZ46D6hyzqtTxtAAwAt6DIm4W/w=" crossorigin=anonymous></script>
-<script type=text/javascript src=/js/anatole-theme-switcher.min.7fd87181cdd7e8413aa64b6867bb32f3a8dc242e684fc7d5bbb9f600dbc2b6eb.js integrity="sha256-f9hxgc3X6EE6pktoZ7sy86jcJC5oT8fVu7n2ANvCtus=" crossorigin=anonymous></script>
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="Start">
-<meta name=twitter:description content="Strona prywatna Sławomir Jasiński">
-<script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","name":"Sławomir Jasiński","url":"\/","description":"Strona prywatna Sławomir Jasiński","thumbnailUrl":"\/","license":"2011-2021"}</script>
-</head>
-<body>
-<header><div class="page-top
-animated fadeInDown">
-<a role=button class=navbar-burger data-target=navMenu aria-label=menu aria-expanded=false>
+    "><link rel=stylesheet href=/css/main.min.0a28517cc8cf1577ac08fce9aed49bbe584c350d58aaf61fb13d6cb13792aeb7.css integrity="sha256-CihRfMjPFXesCPzprtSbvlhMNQ1YqvYfsT1ssTeSrrc=" crossorigin=anonymous type=text/css><link rel=stylesheet href=/css/markupHighlight.min.8e4c8f0a940b1596fb4c64d28a00a5ceed671fc303cb65178b4947417da9c674.css integrity="sha256-jkyPCpQLFZb7TGTSigClzu1nH8MDy2UXi0lHQX2pxnQ=" crossorigin=anonymous type=text/css><link rel=stylesheet href=/css/custom.min.4422e856fcd6f2ee14f32638fe94285230801e7900face89ab29c81910e7e7ba.css integrity="sha256-RCLoVvzW8u4U8yY4/pQoUjCAHnkA+s6JqynIGRDn57o=" crossorigin=anonymous media=screen><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin=anonymous><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=canonical href=/pl/><link rel=alternate type=application/rss+xml href=/pl/index.xml title="Sławomir Jasiński"><script type=text/javascript src=/js/anatole-header.min.d0408165d31a17f17bba83038bf54e86121f85021bdf936382e636f0f77a952f.js integrity="sha256-0ECBZdMaF/F7uoMDi/VOhhIfhQIb35NjguY28Pd6lS8=" crossorigin=anonymous></script>
+<script type=text/javascript src=/js/anatole-theme-switcher.min.ea8ebe268922ef9849261a1312cd65b640595e65251ce4c00534a176afd1ac0c.js integrity="sha256-6o6+Joki75hJJhoTEs1ltkBZXmUlHOTABTShdq/RrAw=" crossorigin=anonymous></script><meta name=twitter:card content="summary"><meta name=twitter:title content="Start"><meta name=twitter:description content="Strona prywatna Sławomir Jasiński"><script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","name":"Sławomir Jasiński","url":"\/","description":"Strona prywatna Sławomir Jasiński","thumbnailUrl":"\/","license":"2011-2022"}</script></head><body><header><div class="page-top
+animated fadeInDown"><a role=button class=navbar-burger data-target=navMenu aria-label=menu aria-expanded=false><span aria-hidden=true></span>
 <span aria-hidden=true></span>
-<span aria-hidden=true></span>
-<span aria-hidden=true></span>
-</a>
-<nav>
-<ul class=nav__list id=navMenu>
-<div class=nav__links>
-<li>
-<a href=/pl/o-mnie/ title="O mnie">O mnie</a>
-</li>
-<li>
-<a href=/pl/categories/diy/ title>Diy</a>
-</li>
-<li><a href=/ title=EN>EN</a></li>
-<li><a href=/pl/ title=PL>PL</a></li>
-</div>
-<li>
-<a class=theme-switch title="Switch Theme">
-<i class="fas fa-adjust fa-fw" aria-hidden=true></i>
-</a>
-</li>
-</ul>
-</nav>
-</div>
-</header>
-<div class=wrapper>
-<aside><div class="sidebar
-animated fadeInDown">
-<div class=sidebar__content>
-<div class=logo-title>
-<div class=title>
-<img src=/images/slavsq.jpg alt="profile picture">
-<h3 title><a href=/>Sławomir Jasiński</a></h3>
-<div class=description>
-<p>Strona prywatna Sławomir Jasiński</p>
-</div>
-</div>
-</div>
-<ul class=social-links>
-<li>
-<a href=https://linkedin.com/in/slawomirjasinski rel=me aria-label=Linkedin>
-<i class="fab fa-linkedin fa-2x" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=https://github.com/slav123 rel=me aria-label>
-<i class="fab fa-github fa-2x" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=https://stackoverflow.com/users/432573/ rel=me aria-label="Stack Overflow">
-<i class="fab fa-stack-overflow fa-2x" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=https://twitter.com/slavomirj rel=me aria-label>
-<i class="fab fa-twitter fa-2x" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=https://www.instagram.com/slavomirj/ rel=me aria-label=instagram>
-<i class="fab fa-instagram fa-2x" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=https://www.spidersoft.com.au rel=me aria-label=business>
-<i class="fas fa-business-time fa-2x" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=mailto:slav123@gmail.com rel=me aria-label=e-mail>
-<i class="fas fa-envelope fa-2x" aria-hidden=true></i>
-</a>
-</li>
-</ul>
-</div><footer class="footer footer--sidebar">
-<div class=by_farbox>
-<ul class=footer__list>
-<li class=footer__item>
-&copy;
-2011-2021
-</li>
-</ul>
-</div>
-</footer>
-<script type=text/javascript src=/js/medium-zoom.min.71100d84fab0ad794b8399a66ac810700cc78d703f715dc10af4d7ba7b761362.js integrity="sha256-cRANhPqwrXlLg5mmasgQcAzHjXA/cV3BCvTXunt2E2I=" crossorigin=anonymous></script></div>
-</aside>
-<main>
-<div class=autopagerize_page_element>
-<div class=content>
-<div class="post
-animated fadeInDown">
-<div class="post-title post-content">
-<p>Witam na mojej stronie,</p>
-<p>Jest to pierwsza edycja &ldquo;tej&rdquo; strony po polsku. Jeśli szukasz bloga technicznego to zerknij na
+<span aria-hidden=true></span></a><nav><ul class=nav__list id=navMenu><div class=nav__links><li><a href=/pl/o-mnie/ title="O mnie">O mnie</a></li><li><a href=/pl/categories/diy/ title>Diy</a></li><li><a href=/ title=EN>EN</a></li><li><a href=/pl/ title=PL>PL</a></li></div><li><a class=theme-switch title="Switch Theme"><i class="fas fa-adjust fa-fw" aria-hidden=true></i></a></li></ul></nav></div></header><div class=wrapper><aside><div class="sidebar
+animated fadeInDown"><div class=sidebar__content><div class=logo-title><div class=title><img src=/images/slavsq.jpg alt="profile picture"><h3 title><a href=/>Sławomir Jasiński</a></h3><div class=description><p>Strona prywatna Sławomir Jasiński</p></div></div></div><ul class=social-links><li><a href=https://linkedin.com/in/slawomirjasinski rel=me aria-label=Linkedin><i class="fab fa-linkedin fa-2x" aria-hidden=true></i></a></li><li><a href=https://github.com/slav123 rel=me aria-label><i class="fab fa-github fa-2x" aria-hidden=true></i></a></li><li><a href=https://stackoverflow.com/users/432573/ rel=me aria-label="Stack Overflow"><i class="fab fa-stack-overflow fa-2x" aria-hidden=true></i></a></li><li><a href=https://twitter.com/slavomirj rel=me aria-label><i class="fab fa-twitter fa-2x" aria-hidden=true></i></a></li><li><a href=https://www.instagram.com/slavomirj/ rel=me aria-label=instagram><i class="fab fa-instagram fa-2x" aria-hidden=true></i></a></li><li><a href=https://www.spidersoft.com.au rel=me aria-label=business><i class="fas fa-business-time fa-2x" aria-hidden=true></i></a></li><li><a href=mailto:slav123@gmail.com rel=me aria-label=e-mail><i class="fas fa-envelope fa-2x" aria-hidden=true></i></a></li></ul></div><footer class="footer footer--sidebar"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
+2011-2022</li></ul></div></footer><script type=text/javascript src=/js/medium-zoom.min.51d7548d5d0e5d4ff7991252239ce6abf1fd527a0eabad7ce6b49aa21f6e08da.js integrity="sha256-UddUjV0OXU/3mRJSI5zmq/H9UnoOq6185rSaoh9uCNo=" crossorigin=anonymous></script></div></aside><main><div class=autopagerize_page_element><div class=content><div class="post
+animated fadeInDown"><div class="post-title post-content"><p>Witam na mojej stronie,</p><p>Jest to pierwsza edycja &ldquo;tej&rdquo; strony po polsku. Jeśli szukasz bloga technicznego to zerknij na
 <a href=https://www.gex.pl>Blog Developera</a>
-, na tej stronie znajdziesz wszystkie publikacje niezwiązane z technologią.</p>
-</div>
-</div>
-<div class="post
-animated fadeInDown">
-<div class=post-thumbnail>
-<a href=/2021/deska-do-krojenia/>
-<img src=/images/2021/04/deska-wip.jpg alt="Thumbnail image" loading=lazy>
-</a>
-</div>
-<div class=post-title>
-<h3><a href=/2021/deska-do-krojenia/>Deska do krojenia</a></h3>
-</div>
-<div class=post-content>
-<div class=p_part>
-<p>
-Deska do krojenia jako szybki prezent dla rodziny &ldquo;Pająków&rdquo;. Deski dębowe, sklejone z lamelkami. Logo wypalone przez laser, dziura wycięta frezarką.
-View this post on Instagram A post shared by Slawomir Jasinski (@slavomirj)
-</p>
-</div>
-</div>
-<div class=post-footer>
-<div class=meta>
-<div class=info>
-<em class="fas fa-calendar-day"></em>
-<span class=date>
-Sat, Apr 17, 2021
-</span>
-<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span>
-</div>
-</div>
-</div>
-</div>
-<div class="post
-animated fadeInDown">
-<div class=post-thumbnail>
-<a href=/2021/plywajace-narozne-biurko/>
-<img src=/images/2021/04/plywajace-biurko.jpg alt="Thumbnail image" loading=lazy>
-</a>
-</div>
-<div class=post-title>
-<h3><a href=/2021/plywajace-narozne-biurko/>Pływające biurko narożne</a></h3>
-</div>
-<div class=post-content>
-<div class=p_part>
-<p>
-<p>Od dawna chciałem wymienić moje &ldquo;tyczasowe&rdquo; rozwiązanie z Ikei na coś bardziej solidnego. Miało być duzo miejsca, nie miało mieć typowych nóg - oraz miało być narożne.</p>
-</p>
-</div>
-</div>
-<div class=post-footer>
-<div class=meta>
-<div class=info>
-<em class="fas fa-calendar-day"></em>
-<span class=date>
-Sat, Apr 3, 2021
-</span>
-<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span>
-</div>
-</div>
-</div>
-</div>
-<div class="post
-animated fadeInDown">
-<div class=post-thumbnail>
-<a href=/2020/warzenie-piwa/>
-<img src=/images/2020/09/dzbanek-piwa.jpg alt="Thumbnail image" loading=lazy>
-</a>
-</div>
-<div class=post-title>
-<h3><a href=/2020/warzenie-piwa/>Warzenie piwa</a></h3>
-</div>
-<div class=post-content>
-<div class=p_part>
-<p>
-Warzeniem piwa zaraził mnie znajomy, który poczęstował mnie swoimi produkcjami. Wcześniej nie miałem żadnego zainteresowania przy produkcji własnych alkoholi. Zaczęło się od cydru - który wydawał mi się wielkim wyzwaniem, ale dosyć szybko przerzuciłem się na warzenie piwa.
-W wielkim uproszczeniu piwo powstaje poprzez odpowiednie wygotowanie słodu z dodatkiem chmielu. Finalny alkohol powstaje oczywiście przy ciężkiej pracy naszych przyjaciół drożdży. Do pełni szczęścia i smaku potrzeba nam oczywiście jeszcze czasu.
-</p>
-</div>
-</div>
-<div class=post-footer>
-<div class=meta>
-<div class=info>
-<em class="fas fa-calendar-day"></em>
-<span class=date>
-Wed, Sep 9, 2020
-</span>
-<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span>
-</div>
-</div>
-</div>
-</div>
-<div class=pagination>
-</div>
-</div>
-</div>
-</main>
-</div><footer class="footer footer--base">
-<div class=by_farbox>
-<ul class=footer__list>
-<li class=footer__item>
-&copy;
-2011-2021
-</li>
-</ul>
-</div>
-</footer>
-<script type=text/javascript src=/js/medium-zoom.min.71100d84fab0ad794b8399a66ac810700cc78d703f715dc10af4d7ba7b761362.js integrity="sha256-cRANhPqwrXlLg5mmasgQcAzHjXA/cV3BCvTXunt2E2I=" crossorigin=anonymous></script></body>
-</html>
+, na tej stronie znajdziesz wszystkie publikacje niezwiązane z technologią.</p></div></div><div class="post
+animated fadeInDown"><div class=post-thumbnail><a href=/2021/deska-do-krojenia/><img src=/images/2021/04/deska-wip.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2021/deska-do-krojenia/>Deska do krojenia</a></h3></div><div class=post-content><div class=p_part><p>Deska do krojenia jako szybki prezent dla rodziny &ldquo;Pająków&rdquo;. Deski dębowe, sklejone z lamelkami. Logo wypalone przez laser, dziura wycięta frezarką.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
+<span class=date>Sat, Apr 17, 2021</span>
+<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span></div></div></div></div><div class="post
+animated fadeInDown"><div class=post-thumbnail><a href=/2021/plywajace-narozne-biurko/><img src=/images/2021/04/plywajace-biurko.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2021/plywajace-narozne-biurko/>Pływające biurko narożne</a></h3></div><div class=post-content><div class=p_part><p><p>Od dawna chciałem wymienić moje &ldquo;tyczasowe&rdquo; rozwiązanie z Ikei na coś bardziej solidnego. Miało być duzo miejsca, nie miało mieć typowych nóg - oraz miało być narożne.</p></p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
+<span class=date>Sat, Apr 3, 2021</span>
+<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span></div></div></div></div><div class="post
+animated fadeInDown"><div class=post-thumbnail><a href=/2020/warzenie-piwa/><img src=/images/2020/09/dzbanek-piwa.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2020/warzenie-piwa/>Warzenie piwa</a></h3></div><div class=post-content><div class=p_part><p>Warzeniem piwa zaraził mnie znajomy, który poczęstował mnie swoimi produkcjami. Wcześniej nie miałem żadnego zainteresowania przy produkcji własnych alkoholi. Zaczęło się od cydru - który wydawał mi się wielkim wyzwaniem, ale dosyć szybko przerzuciłem się na warzenie piwa.
+W wielkim uproszczeniu piwo powstaje poprzez odpowiednie wygotowanie słodu z dodatkiem chmielu. Finalny alkohol powstaje oczywiście przy ciężkiej pracy naszych przyjaciół drożdży. Do pełni szczęścia i smaku potrzeba nam oczywiście jeszcze czasu.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
+<span class=date>Wed, Sep 9, 2020</span>
+<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span></div></div></div></div><div class=pagination></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
+2011-2022</li></ul></div></footer><script type=text/javascript src=/js/medium-zoom.min.51d7548d5d0e5d4ff7991252239ce6abf1fd527a0eabad7ce6b49aa21f6e08da.js integrity="sha256-UddUjV0OXU/3mRJSI5zmq/H9UnoOq6185rSaoh9uCNo=" crossorigin=anonymous></script></body></html>
