--- a/cheap-arduino-clone-dccele-dccduino-uno/index.html
+++ b/cheap-arduino-clone-dccele-dccduino-uno/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html dir=ltr lang=en data-theme><head><title>Slav
 |
-Cheap Arduino clone DccEle – DCcduino Uno</title><meta charset=utf-8><meta name=generator content="Hugo 0.110.0"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover"><meta name=description content="
+Cheap Arduino clone DccEle – DCcduino Uno</title><meta charset=utf-8><meta name=generator content="Hugo 0.111.3"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover"><meta name=description content="
       Call me Slav
 
 
@@ -33,6 +33,6 @@ animated fadeInDown"><div class=post-content><img class=post-thumbnail src=/imag
  which pointed me to proper drivers.</p><p><img src=/images/2014/09/cheap-arduino.jpg alt=cheap-arduino></p><p>If you are not afraid, just pull drivers from this website 
 <a href=http://www.5v.ru/ch340g.htm>www.5v.ru</a>
  or this one 
-<a href="http://www.wch.cn/downloads.php?name=pro&proid=178">www.wch.cn</a>
+<a href="http://www.wch.cn/downloads.php?name=pro&amp;proid=178">www.wch.cn</a>
 . You can also pull copies from here:</p><ul><li><a href=http://www.jasinski.us/images/2014/09/ch341ser_macv12.zip>ch341ser_mac(v12)</a></li><li><a href=http://www.jasinski.us/images/2014/09/ch341ser_macv13.zip>ch341ser_mac(v13)</a></li><li><a href=http://www.jasinski.us/images/2014/09/CH341SER_MAC.zip>CH341SER_MAC</a></li></ul><p>All you need to do is just to install them – reboot computer – the new device will appear on your device list:</p><p><img src=/images/2014/09/arduino-device.png alt></p><p>And obviously you can upload blink code to your new device:</p><p><img src=/images/2014/09/blink.png alt></p></div><div class=post-footer><div class=info><span class=separator><a class=category href=/categories/arduino/>Arduino</a></span></div></div></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
 2011-2022</li></ul></div></footer><script type=text/javascript src=/js/medium-zoom.min.44288fd315b6cda68c1f4743caad56535c0f81a5b5a672f385e82b3896575c1d.js integrity="sha256-RCiP0xW2zaaMH0dDyq1WU1wPgaW1pnLzhegrOJZXXB0=" crossorigin=anonymous></script></body></html>
