--- a/pl/index.html
+++ b/pl/index.html
@@ -14,6 +14,10 @@ animated fadeInDown"><div class=sidebar__content><div class=logo-title><div clas
 animated fadeInDown"><div class="post-title post-content"><p>Witam na mojej stronie,</p><p>Jest to pierwsza edycja &ldquo;tej&rdquo; strony po polsku. Jeśli szukasz bloga technicznego to zerknij na
 <a href=https://www.gex.pl>Blog Developera</a>
 , na tej stronie znajdziesz wszystkie publikacje niezwiązane z technologią.</p></div></div><div class="post
+animated fadeInDown"><div class=post-title><h3><a href=/2023/prawda-developera/>Prawda developera</a></h3></div><div class=post-content><div class=p_part><p>komentarz developera
+Zamknąłem ticket, z opisem &ldquo;nie znaleźliśmy przyczyny&rdquo; co będzie prawdą bo nie szukaliśmy&mldr;</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
+<span class=date>Tue, Jun 20, 2023</span>
+<span class=separator><a class=category href=/pl/categories/fun/>Fun</a></span></div></div></div></div><div class="post
 animated fadeInDown"><div class=post-thumbnail><a href=/2021/deska-do-krojenia/><img src=/images/2021/04/deska-wip.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2021/deska-do-krojenia/>Deska do krojenia</a></h3></div><div class=post-content><div class=p_part><p>Deska do krojenia jako szybki prezent dla rodziny &ldquo;Pająków&rdquo;. Deski dębowe, sklejone z lamelkami. Logo wypalone przez laser, dziura wycięta frezarką.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
 <span class=date>Sat, Apr 17, 2021</span>
 <span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span></div></div></div></div><div class="post
@@ -23,9 +27,5 @@ animated fadeInDown"><div class=post-thumbnail><a href=/2021/plywajace-narozne-b
 animated fadeInDown"><div class=post-thumbnail><a href=/2020/warzenie-piwa/><img src=/images/2020/09/dzbanek-piwa.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2020/warzenie-piwa/>Warzenie piwa</a></h3></div><div class=post-content><div class=p_part><p>Warzeniem piwa zaraził mnie znajomy, który poczęstował mnie swoimi produkcjami. Wcześniej nie miałem żadnego zainteresowania przy produkcji własnych alkoholi. Zaczęło się od cydru - który wydawał mi się wielkim wyzwaniem, ale dosyć szybko przerzuciłem się na warzenie piwa.
 W wielkim uproszczeniu piwo powstaje poprzez odpowiednie wygotowanie słodu z dodatkiem chmielu. Finalny alkohol powstaje oczywiście przy ciężkiej pracy naszych przyjaciół drożdży. Do pełni szczęścia i smaku potrzeba nam oczywiście jeszcze czasu.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
 <span class=date>Wed, Sep 9, 2020</span>
-<span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span></div></div></div></div><div class="post
-animated fadeInDown"><div class=post-title><h3><a href=/2023/prawda-developera/>Prawda developera</a></h3></div><div class=post-content><div class=p_part><p>komentarz developera
-Zamknąłem ticket, z opisem &ldquo;nie znaleźliśmy przyczyny&rdquo; co będzie prawdą bo nie szukaliśmy&mldr;</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
-<span class=date>Mon, Jan 1, 0001</span>
 <span class=separator><a class=category href=/pl/categories/diy/>Diy</a></span></div></div></div></div><div class=pagination></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
 2011-2023</li></ul></div></footer><script type=text/javascript src=/js/medium-zoom.min.44288fd315b6cda68c1f4743caad56535c0f81a5b5a672f385e82b3896575c1d.js integrity="sha256-RCiP0xW2zaaMH0dDyq1WU1wPgaW1pnLzhegrOJZXXB0=" crossorigin=anonymous></script></body></html>
