deploy: 3f0158a1369548fff8300edae42ef2ac9a1a12ed

--- a/usb-to-ttl-serial-macos-mojave/index.html
+++ b/usb-to-ttl-serial-macos-mojave/index.html
@@ -26,10 +26,10 @@ animated fadeInDown"><div class=post-content><img class=post-thumbnail src=/imag
 </span><em class="fas fa-stopwatch"></em>
 <span class=reading-time>One-minute read</span></div></div><p>Got a bunch of these little f*ckers and couldn’t make them to work with my Mojave fresh install. Previously they were working, and now they are gone.</p><p>I wasn’t sure what exactly I’ve got. I just run
 <a href=https://www.mac-usb-serial.com/>Serial Detect</a>
-to identify what model do I own:</p><p><img src=/images/2019/01/Screenshot-2019-01-22-15.32.27.png></p><p>Then I googled driver for MacOS Mojave. Because original website:
+to identify what model do I own:</p><p><img alt="mac usb serial" src=/images/2019/01/Screenshot-2019-01-22-15.32.27.png></p><p>Then I googled driver for MacOS Mojave. Because original website:
 <a href=https://www.silabs.com/products/development-tools/software/usb-to-uart-bridge-vcp-drivers>CP210x USB to UART Bridge VCP Drivers</a>
 likes to file, I made a mirror on my server. So you can pull drivers directly
-<a href=http://www.jasinski.us/images/2019/01/Mac_OSX_VCP_Driver.zip>from here</a>
+<a href=/images/2019/01/Mac_OSX_VCP_Driver.zip target=_blank rel=noopener>from here</a>
 .</p></div><div class=post-footer><div class=info><span class=separator><a class=category href=/categories/arduino/>Arduino</a></span>
 <span class=separator><a class=tag href=/tags/drivers/>drivers</a><a class=tag href=/tags/serial/>serial</a></span></div></div></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
 2011-2024</li></ul></div></footer><script type=text/javascript src=/js/medium-zoom.min.44288fd315b6cda68c1f4743caad56535c0f81a5b5a672f385e82b3896575c1d.js integrity="sha256-RCiP0xW2zaaMH0dDyq1WU1wPgaW1pnLzhegrOJZXXB0=" crossorigin=anonymous></script></body></html>
