deploy: edc7dab9a134cdc2fa5da30ad08211c39aaf8cae

--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@ board, plug sensor from the family of sensors (HY-SRF05, HC-SR04), some kind of 
 animated fadeInDown"><div class=post-title><h3><a href=/arduino-double-relay-keypad-lock/>Arduino double relay keypad lock</a></h3></div><div class=post-content><div class=p_part><p>I needed key-less way to open my garage door. Quite often I forgot my remote, so just need something easy to open them without remote. Because I have regular “ring type” opener (click and release to open door) needed something to “click” door for me based on something which I remember (not own – remote / key / etc).
 Basic idea – keypad + arduino + relay to click the button.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
 <span class=date>Wed, Mar 6, 2019
-</span><span class=separator><a class=category href=/categories/arduino/>Arduino</a></span>
-<span class=separator><a class=tag href=/tags/keypad/>keypad</a><a class=tag href=/tags/relay/>relay</a></span></div></div></div></div><div class="post
+</span><span class=separator><a class=category href=/categories/arduino/>Arduino</a></span></div></div></div></div><div class="post
 animated fadeInDown"><div class=post-thumbnail><a href=/usb-to-ttl-serial-macos-mojave/><img src=/images/2019/01/usb-ttl-serial.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/usb-to-ttl-serial-macos-mojave/>USB to TTL / Serial MacOS Mojave</a></h3></div><div class=post-content><div class=p_part><p>Got a bunch of these little f*ckers and couldn’t make them to work with my Mojave fresh install. Previously they were working, and now they are gone.
 I wasn’t sure what exactly I’ve got. I just run Serial Detect to identify what model do I own:
 Then I googled driver for MacOS Mojave. Because original website: CP210x USB to UART Bridge VCP Drivers likes to file, I made a mirror on my server.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
 <span class=date>Tue, Jan 22, 2019
-</span><span class=separator><a class=category href=/categories/arduino/>Arduino</a></span>
-<span class=separator><a class=tag href=/tags/drivers/>drivers</a><a class=tag href=/tags/serial/>serial</a></span></div></div></div></div><div class="post
+</span><span class=separator><a class=category href=/categories/arduino/>Arduino</a></span></div></div></div></div><div class="post
 animated fadeInDown"><div class=post-title><h3><a href=/get-out-of-life-what-you-deserve/>Quote - Get out of life what you deserve</a></h3></div><div class=post-content><div class=p_part><p>“Spend each day trying to be a little wiser than you were when you woke up. Day by day, and at the end of the day-if you live long enough-like most people, you will get out of life what you deserve.” — Charlie Munger</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
 <span class=date>Mon, Jan 8, 2018
 </span><span class=separator><a class=category href=/categories/quotes/>Quotes</a></span></div></div></div></div><div class="post
