--- a/office-view/index.html
+++ b/office-view/index.html
@@ -22,5 +22,5 @@ animated fadeInDown"><div class=sidebar__content><div class=logo-title><div clas
 animated fadeInDown"><div class=post-content><div class=post-title><h1>Office view</h1><div class=info><em class="fas fa-calendar-day"></em>
 <span class=date>Thu, Sep 22, 2011
 </span><em class="fas fa-stopwatch"></em>
-<span class=reading-time>0-minute read</span></div></div><p><img src=/images/2016/09/photo.jpg></p></div><div class=post-footer><div class=info><span class=separator><a class=category href=/categories/random/>Random</a></span></div></div></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
+<span class=reading-time>0-minute read</span></div></div><p><img alt="Nice Office view" src=/images/2016/09/photo.jpg></p></div><div class=post-footer><div class=info><span class=separator><a class=category href=/categories/random/>Random</a></span></div></div></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
 2011-2024</li></ul></div></footer><script type=text/javascript src=/js/medium-zoom.min.44288fd315b6cda68c1f4743caad56535c0f81a5b5a672f385e82b3896575c1d.js integrity="sha256-RCiP0xW2zaaMH0dDyq1WU1wPgaW1pnLzhegrOJZXXB0=" crossorigin=anonymous></script></body></html>
